5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_2894.log
== TEST (2019-03-26 18:29:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:29:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:30:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:30:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo = float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_ jogo= float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    valor_do_ jogo= float(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:42:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.142959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:42:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.30269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:42:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.131143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:42:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:43:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))

valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.141143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 9, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:50) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:44:04) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.127087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:09) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:44:14) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.166573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:16) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:34) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:44:35) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.218917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:36) 
-- CODE:
valor_do_jogo = float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:42) 
-- CODE:
valor_do_jogo =float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:50) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:51) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:06) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
# Calculo do valor a ser pago, incluindo o frete:
total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:33) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45

total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:45:35) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45

total = valor_do_jogo1 * 8 + valor_do_frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.175858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:43) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:15) 
-- CODE:
valor_do_jogo= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:16) 
-- CODE:
valor_do_jogo= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.129235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:18) 
-- CODE:
valor_do_jogo= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.177793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:19) 
-- CODE:
valor_do_jogo= float(input("Qual_o_valor_unitario_do_jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.154794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:47:20) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))
print= 8

valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:47:21) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))
print= 8

valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.143205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:14) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:48:40) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo?"))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.127018
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:23) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:27) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.152281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:27) 
-- CODE:
valor_do_jogo= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = valor_do_jogo1 * 8 + valor_do_frete
NameError: name 'valor_do_jogo1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:48) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.154902
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:34) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:51:35) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.204445
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:51:43) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.220677
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:44) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:51:45) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.185081
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:06:52) 
-- CODE:
valor_do_jogo1= float(input("Qual o valor unitario do jogo? "))


valor_do_frete= 45.0
total = valor_do_jogo1 * 8 + valor_do_frete


print(total)
-- EXECUTION TIME:
0.170263
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
